Reorganize benefits section with updated content

--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -176,34 +176,34 @@
       </div>
     </section>
 
-    <!-- 5) Benefits (3 logos side by side with descriptions) -->
-    <section class="section">
-      <h2>Benefits of a Deep Clean</h2>
-      <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; margin-top: 30px; max-width: 900px; margin-left: auto; margin-right: auto;">
-        
-        <!-- Benefit 1 -->
-        <div style="text-align: center;">
-          <img src="/images/fresh-start-icon.png" alt="Fresh Reset" style="width: 80px; height: 80px; margin-bottom: 15px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Fresh Reset</h3>
-          <p style="margin: 0; line-height: 1.6;">Perfect before holidays, events, or the start of a new season. Remove built-up grime and restore your home.</p>
-        </div>
+   <!-- 5) Benefits (3 logos side by side with descriptions) -->
+<section class="section">
+  <h2>Benefits of a Deep Clean</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; margin-top: 30px; max-width: 900px; margin-left: auto; margin-right: auto;">
 
-        <!-- Benefit 2 -->
-        <div style="text-align: center;">
-          <img src="/images/healthier-home-icon.png" alt="Healthier Home" style="width: 80px; height: 80px; margin-bottom: 15px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Healthier Home</h3>
-          <p style="margin: 0; line-height: 1.6;">Reduce allergens, dust, and bacteria. Deep cleaning improves air quality and creates a healthier environment.</p>
-        </div>
+    <!-- Benefit 1 -->
+    <div style="text-align: center;">
+      <img src="/images/fresh-start-icon.png" alt="Fresh Reset" class="benefit-icon" style="margin-bottom: 15px;">
+      <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Fresh Reset</h3>
+      <p style="margin: 0; line-height: 1.6;">Perfect before holidays, events, or the start of a new season. Remove built-up grime and restore your home.</p>
+    </div>
 
-        <!-- Benefit 3 -->
-        <div style="text-align: center;">
-          <img src="/images/duster.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Hard to Reach Areas</h3>
-          <p style="margin: 0; line-height: 1.6;">We tackle ceiling fans, vents, baseboards, and all those spots that are easy to overlook but make a big difference.</p>
-        </div>
+    <!-- Benefit 2 -->
+    <div style="text-align: center;">
+      <img src="/images/healthier-home-icon.png" alt="Healthier Home" class="benefit-icon" style="margin-bottom: 15px;">
+      <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Healthier Home</h3>
+      <p style="margin: 0; line-height: 1.6;">Reduce allergens, dust, and bacteria. Deep cleaning improves air quality and creates a healthier environment.</p>
+    </div>
 
-      </div>
-    </section>
+    <!-- Benefit 3 -->
+    <div style="text-align: center;">
+      <img src="/images/duster.png" alt="Hard to Reach Areas" class="benefit-icon" style="margin-bottom: 15px;">
+      <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Hard to Reach Areas</h3>
+      <p style="margin: 0; line-height: 1.6;">We tackle ceiling fans, vents, baseboards, and all those spots that are easy to overlook but make a big difference.</p>
+    </div>
+
+  </div>
+</section>
 
     <!-- 6) "See the Difference" (visual section) -->
     <section class="section">
